1999-08-31  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* proto/cf/rrouter.cf:
	    Another missed "$(dequote ...)" call.  Without this,
	    pipe/file stores don't get "magic" 'pipe.*' and 'file.*'
	    local channel tags so that all other cases can safely
	    be run to procmail as the local delivery agent.

1999-08-30  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* Makefile.in:
	    Version 2.99.52-pre1

	* sfio/*
	    Looking for ways to use this thing...

1999-08-27  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* contrib/pipeauth-0.55.tar.gz, contrib/rauth-0.56.tar.gz,
	  proto/smtpserver.conf.in, proto/zmailer.sh.in,
	  smtpserver/cfgread.c, smtpserver/fdstatfs.c,
	  smtpserver/smtpcmds.c, smtpserver/smtpserver.h,
	  smtpserver/zpwmath.c, utils/policybuilder.sh.in,
	  doc/guides/smtp-msa-mode:
	    Heaps of changes from an ISP guy
	    Artur Urbanowicz <artur.urbanowicz@man.lublin.pl>
	
	* transports/libta/diagnostic.c:
	    Report the 'host' part of the referred channel/host pair
	    for which the diagnostic is being presented.

1999-08-26  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* smtpserver/smtpcmds.c:
	    Fix support for SLOPPY mode "MAIL FROM:<>" source address.

1999-08-24  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* smtpserver/smtpserver.h, smtpserver/smtpserver.c,
	  smtpserver/smtpcmds.c, smtpserver/smtpdata.c, smtpserver/smtprouter.c:
	    Modify (somewhat) buffering issues; small change at  s_setup(),
	    all around change  putc()  to  fputc().

	* libc/mail.c:
	    Do  setvbuf( _IOFBF )  on freshly opened file descriptor.

1999-08-22  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* transports/smtp/smtp.c:
	    An odd-ball case of lacking RSET in PIPELINING mode when
	    none of the recipients were successfull..

1999-08-21  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* proto/cf/fqdnalias.cf:
	    One last missing usage instance of "runas .. cat ..".
	
	* scheduler/msgerror.c:
	    Printout the  MESSAGE/DELIVERY-STATUS  report to the end of