@@ -1,3 +1,8 @@
+1999-09-01  Matti Aarnio  <mea@mea.tmt.tele.fi>
+
+	* transports/smtp/smtp.c:
+	    Error reports from "." phase were improper, cured.
+
 1999-08-31  Matti Aarnio  <mea@mea.tmt.tele.fi>
 
 	* proto/cf/rrouter.cf:
